Fix height spacings

--- a/css/main.css
+++ b/css/main.css
@@ -202,7 +202,7 @@ h1.arabic {
 }
 
 h1.persian {
-  line-height: 5.5rem;
+  line-height: 6rem;
 }
 
 h1.arabic {
@@ -224,7 +224,7 @@ h2.arabic {
 }
 
 h2.persian {
-  line-height: 4rem;
+  line-height: 4.5rem;
 }
 
 h2.arabic {
@@ -246,7 +246,7 @@ h3.arabic {
 }
 
 h3.persian {
-  line-height: 3.5rem;
+  line-height: 4.25rem;
 }
 
 h3.arabic {
@@ -268,7 +268,7 @@ h4.arabic {
 }
 
 h4.persian {
-  line-height: 3.25rem;
+  line-height: 3.75rem;
 }
 
 h4.arabic {
@@ -289,7 +289,7 @@ h5.arabic {
 }
 
 h5.persian {
-  line-height: 2.25rem;
+  line-height: 3rem;
   word-spacing: 0.0625rem;
 }
 
@@ -312,7 +312,7 @@ h6.arabic {
 }
 
 h6.persian {
-  line-height: 2.25rem;
+  line-height: 3.25rem;
   word-spacing: 0.0625rem;
 }
 
@@ -323,7 +323,7 @@ h6.arabic {
 
 .title {
   font-size: 1.125rem;
-  line-height: 2rem;
+  line-height: 2.25rem;
   letter-spacing: 0.01562rem;
   word-spacing: 0.0625rem;
 }
@@ -334,7 +334,7 @@ h6.arabic {
 }
 
 .title-persian {
-  line-height: 2rem;
+  line-height: 2.25rem;
   word-spacing: 0.125rem;
 }
 
@@ -346,7 +346,7 @@ h6.arabic {
 p {
   font-size: 1rem;
   line-height: 2.75rem;
-  letter-spacing: 0.0625rem;
+  letter-spacing: 0.01562rem;
   word-spacing: 0.125rem;
 }
 
@@ -357,7 +357,7 @@ p.arabic {
 }
 
 p.persian {
-  line-height: 2.25rem;
+  line-height: 3.5rem;
   word-spacing: 0.25rem;
 }
 
@@ -370,7 +370,7 @@ small,
 li {
   font-size: 0.875rem;
   line-height: 3rem;
-  letter-spacing: 0.0625rem;
+  letter-spacing: 0.03125rem;
   word-spacing: 0.25rem;
 }
 
@@ -383,7 +383,7 @@ small.arabic {
 
 small.persian,
 li.persian {
-  line-height: 2.5rem;
+  line-height: 3.75rem;
   word-spacing: 0.25rem;
 }
 
