--- a/sass/typography/_caption.scss
+++ b/sass/typography/_caption.scss
@@ -2,7 +2,7 @@ small,
 li {
   font-size: $caption;
   line-height: $pd-48;
-  letter-spacing: $pd-1;
+  letter-spacing: $pd-050;
   word-spacing: $pd-4;
 }
 
@@ -15,7 +15,7 @@ small.arabic {
 
 small.persian,
 li.persian {
-  line-height: $pd-40;
+  line-height: $pd-60;
   word-spacing: $pd-4;
 }
 
