--- a/sass/typography/_h1.scss
+++ b/sass/typography/_h1.scss
@@ -13,7 +13,7 @@ h1.arabic {
 }
 
 h1.persian {
-  line-height: $pd-88;
+  line-height: $pd-96;
 }
 
 h1.arabic {
