--- a/sass/typography/_h2.scss
+++ b/sass/typography/_h2.scss
@@ -13,7 +13,7 @@ h2.arabic {
 }
 
 h2.persian {
-  line-height: $pd-64;
+  line-height: $pd-72;
 }
 
 h2.arabic {
