--- a/sass/typography/_h3.scss
+++ b/sass/typography/_h3.scss
@@ -13,7 +13,7 @@ h3.arabic {
 }
 
 h3.persian {
-  line-height: $pd-56;
+  line-height: $pd-68;
 }
 
 h3.arabic {
