--- a/sass/typography/_h4.scss
+++ b/sass/typography/_h4.scss
@@ -13,7 +13,7 @@ h4.arabic {
 }
 
 h4.persian {
-  line-height: $pd-52;
+  line-height: $pd-60;
 }
 
 h4.arabic {
