--- a/sass/typography/_h5.scss
+++ b/sass/typography/_h5.scss
@@ -12,7 +12,7 @@ h5.arabic {
 }
 
 h5.persian {
-  line-height: $pd-36;
+  line-height: $pd-48;
   word-spacing: $pd-1;
 }
 
