--- a/sass/typography/_h6.scss
+++ b/sass/typography/_h6.scss
@@ -12,7 +12,7 @@ h6.arabic {
 }
 
 h6.persian {
-  line-height: $pd-36;
+  line-height: $pd-52;
   word-spacing: $pd-1;
 }
 
